[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bitvec = "1.0.1"
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
regex = "1.12.2"
# the stock rust hashmap is designed to be resistant to 
# ddos attacks. this one used by rustc is designed to be fast
rustc-hash = "2.1.1"

[profile.profiling]
inherits = "release"
debug = true
